--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,15 @@
     <string name="login">Login</string>
     <string name="sign_in_to_continue">Sign in to continue!</string>
     <string name="i_m_a_new_user_sign_up">Im a new user,<b> Sign Up</b></string>
-    <string name="create_account" >Create Account,</string>
+    <string name="create_account">Create Account,</string>
     <string name="sign_up_to_get_started">Sign up to get Started</string>
     <string name="full_name">Full Name</string>
     <string name="im_already_a_member_sign_in">Im already a member, Sign In</string>
     <string name="sign_up">Sign up</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="profile">Profile</string>
+    <string name="settings">Settings</string>
+    <string name="post_add">Post Add</string>
+    <string name="component">Component</string>
 </resources>
