--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="settings">Settings</string>
     <string name="post_add">Post Add</string>
     <string name="component">Component</string>
+    <string name="create_a_post">Create a Post</string>
+    <string name="enter_your_post_text">What do you want to talk about?</string>
 </resources>
